Prevented headshot from pushing off the screen on small devices
Kept it with headshot CSS for now. Can move to another location after there are more @medias

--- a/style/portfolio_main.css
+++ b/style/portfolio_main.css
@@ -75,6 +75,16 @@ h2.title-text {
 	max-width:20em;
 }
 
+@media only screen and (max-width: 600px) {
+	/*Prevent headshot from pushing off the screen
+	  on small devices*/
+	.img-test {
+		margin-right: auto;
+		box-shadow: 6px 8px rgba(172, 212, 209, 0.8);
+		max-width: 300px;
+	}
+}
+
 .text-column {
 	margin-top: 50px;
 	max-width: 50%;
